--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@
 *.iml
 *.ipr
 *.iws
-/lib
-/packages/**/lib
-/packages/**/dist
+# /lib
+# /packages/**/lib
+# /packages/**/dist
 /packages/**/node_modules
 /packages/**/npm-debug.log
 .DS_Store
