--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "publish-packages": "npm run bootstrap ; lerna run build && node scripts/bump-version-push-publish",
         "build": "lerna run build && npm run build:chrome && npm run build:firefox",
         "prepare": "npm run build",
+        "preinstall": "git submodule update --init",
         "start-playground": "cross-env NODE_ENV=development webpack-dev-server --config packages/playground/webpack.config.js",
         "start-playground-plain": "cross-env NODE_ENV=development cross-env PLAIN_DEVTOOL=true webpack-dev-server --config packages/playground/webpack.config.js",
         "start-playground-electron": "cd packages/playground && npm run start-electron",
